--- a/ShoppOnline/ShoppOnline.csproj
+++ b/ShoppOnline/ShoppOnline.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.29" PrivateAssets="all" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ShopOnlineModels\ShopOnlineModels.csproj" />
+  </ItemGroup>
+
 </Project>
